--- a/TestService/TestService.csproj
+++ b/TestService/TestService.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MyAccess\MyAccess.csproj" />
     <ProjectReference Include="..\TemplateAction\TemplateAction.csproj" />
   </ItemGroup>
 
