--- a/TemplateAction/TemplateAction.csproj
+++ b/TemplateAction/TemplateAction.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Core\Attribute\HttpGetAttribute.cs" />
     <Compile Include="Core\Attribute\HttpPostAttribute.cs" />
     <Compile Include="Core\Attribute\RouteAttribute.cs" />
+    <Compile Include="Core\Dispatcher\AbstractEventDispatcher.cs" />
     <Compile Include="Core\Dispatcher\ContextCreatedEvent.cs" />
     <Compile Include="Core\Dispatcher\DefaultMultiHandler.cs" />
     <Compile Include="Core\Dispatcher\EndSessionEvent.cs" />
