no commit message

--- a/MainWeb/MainWeb.csproj
+++ b/MainWeb/MainWeb.csproj
@@ -97,7 +97,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Plugin\" />
+    <Folder Include="plugin\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
