--- a/ResumeML/ResumeML/ResumeML.csproj
+++ b/ResumeML/ResumeML/ResumeML.csproj
@@ -2,11 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\TemplateAction.NetCore\TemplateAction.NetCore.csproj" />
+    <ProjectReference Include="..\..\TemplateAction\TemplateAction.csproj" />
     <ProjectReference Include="..\ResumeMLML.Model\ResumeMLML.Model.csproj" />
   </ItemGroup>
 
