修复插件加载bug

--- a/ResumeML/ResumeML/ResumeML.csproj
+++ b/ResumeML/ResumeML/ResumeML.csproj
@@ -5,6 +5,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>bin\</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\TemplateAction.NetCore\TemplateAction.NetCore.csproj" />
     <ProjectReference Include="..\..\TemplateAction\TemplateAction.csproj" />
