--- a/MainWeb/bin/MainWeb.dll.config
+++ b/MainWeb/bin/MainWeb.dll.config
@@ -12,11 +12,10 @@
         <httpRuntime targetFramework="4.5" />
       </system.Web>
   -->
-  <appSettings>
-  </appSettings>
+  <appSettings/>
   <system.web>
-    <compilation debug="true"  targetFramework="4.5"/>
-    <httpRuntime targetFramework="4.5" maxRequestLength="102400" maxQueryStringLength="102400" />
+    <compilation debug="true" targetFramework="4.6"/>
+    <httpRuntime targetFramework="4.5" maxRequestLength="102400" maxQueryStringLength="102400"/>
   </system.web>
   <system.webServer>
     <modules>
