--- a/TemplateAction.Route/TemplateAction.Route.csproj
+++ b/TemplateAction.Route/TemplateAction.Route.csproj
@@ -1,92 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{72F12CBE-D4CB-487C-B7B5-BC7CE548C4D2}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TemplateAction.Route</RootNamespace>
-    <AssemblyName>TemplateAction.Route</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
     <OutputPath>bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>bin\</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
+    <ProjectReference Include="..\TemplateAction\TemplateAction.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AbstractRouterBuilder.cs" />
-    <Compile Include="Constraints\AlphaRouteConstraint.cs" />
-    <Compile Include="Constraints\BoolRouteConstraint.cs" />
-    <Compile Include="Constraints\CompositeRouteConstraint.cs" />
-    <Compile Include="Constraints\DateTimeRouteConstraint.cs" />
-    <Compile Include="Constraints\DecimalRouteConstraint.cs" />
-    <Compile Include="Constraints\DoubleRouteConstraint.cs" />
-    <Compile Include="Constraints\ExistsRouteConstraint.cs" />
-    <Compile Include="Constraints\FloatRouteConstraint.cs" />
-    <Compile Include="Constraints\GuidRouteConstraint.cs" />
-    <Compile Include="Constraints\IntRouteConstraint.cs" />
-    <Compile Include="Constraints\LengthRouteConstraint.cs" />
-    <Compile Include="Constraints\LongRouteConstraint.cs" />
-    <Compile Include="Constraints\MaxLengthRouteConstraint.cs" />
-    <Compile Include="Constraints\MaxRouteConstraint.cs" />
-    <Compile Include="Constraints\MinLengthRouteConstraint.cs" />
-    <Compile Include="Constraints\MinRouteConstraint.cs" />
-    <Compile Include="Constraints\OptionalRouteConstraint.cs" />
-    <Compile Include="Constraints\RangeRouteConstraint.cs" />
-    <Compile Include="Constraints\RegexInlineRouteConstraint.cs" />
-    <Compile Include="Constraints\RegexRouteConstraint.cs" />
-    <Compile Include="Constraints\RequiredRouteConstraint.cs" />
-    <Compile Include="PluginRouterBuilder.cs" />
-    <Compile Include="IRouteConstraint.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Router.cs" />
-    <Compile Include="RouteInlineConstraint.cs" />
-    <Compile Include="RouteInlineParameterParser.cs" />
-    <Compile Include="RoutePathTokenizer.cs" />
-    <Compile Include="RouterBuilder.cs" />
-    <Compile Include="RouterCollection.cs" />
-    <Compile Include="RouteStringSegment.cs" />
-    <Compile Include="RouteTemplate.cs" />
-    <Compile Include="RouteTemplateMatcher.cs" />
-    <Compile Include="RouteTemplateParser.cs" />
-    <Compile Include="RouteTemplatePart.cs" />
-    <Compile Include="RouteTemplateSegment.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\TemplateAction\TemplateAction.csproj">
-      <Project>{cde0898f-a324-42a1-84ba-727917432e13}</Project>
-      <Name>TemplateAction</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
