--- a/MyNet.TemplateAction/MyNet.TemplateAction.csproj
+++ b/MyNet.TemplateAction/MyNet.TemplateAction.csproj
@@ -1,75 +1,22 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{169558C6-2CB1-4583-8BD3-1619339EE5FE}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MyNet.TemplateAction</RootNamespace>
-    <AssemblyName>MyNet.TemplateAction</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+    <Authors>重新读取</Authors>
+    <Copyright>版权所有(C)重新读取 2021</Copyright>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <OutputPath>bin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <OutputPath>bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+
   <ItemGroup>
-    <Compile Include="ActionEvent.cs" />
-    <Compile Include="HttpSessionProxy.cs" />
-    <Compile Include="HttpSite.cs" />
-    <Compile Include="MvcHandler.cs" />
-    <Compile Include="HttpSession.cs" />
-    <Compile Include="HttpSessionManager.cs" />
-    <Compile Include="HttpContext.cs" />
-    <Compile Include="MyNetAsyncResult.cs" />
-    <Compile Include="MyNetCookie.cs" />
-    <Compile Include="MyNetExtensions.cs" />
-    <Compile Include="MyNetObjectCollection.cs" />
-    <Compile Include="MyNetRequest.cs" />
-    <Compile Include="MyNetResponse.cs" />
-    <Compile Include="MyNetWebRequestFile.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StaticFileCache.cs" />
+    <ProjectReference Include="..\MyNet\MyNet.csproj" />
+    <ProjectReference Include="..\TemplateAction\TemplateAction.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MyNet\MyNet.csproj">
-      <Project>{d5b0f697-7df5-462e-aa9f-6e967c5df428}</Project>
-      <Name>MyNet</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TemplateAction\TemplateAction.csproj">
-      <Project>{cde0898f-a324-42a1-84ba-727917432e13}</Project>
-      <Name>TemplateAction</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
