--- a/MainWeb/Web.config
+++ b/MainWeb/Web.config
@@ -12,7 +12,8 @@
         <httpRuntime targetFramework="4.5" />
       </system.Web>
   -->
-  <appSettings/>
+  <appSettings>
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.5" maxRequestLength="102400" maxQueryStringLength="102400"/>
