--- a/ResumeML/ResumeML/ResumeML.csproj
+++ b/ResumeML/ResumeML/ResumeML.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.ML" Version="1.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\TemplateAction.NetCore\TemplateAction.NetCore.csproj" />
     <ProjectReference Include="..\..\TemplateAction\TemplateAction.csproj" />
     <ProjectReference Include="..\ResumeMLML.Model\ResumeMLML.Model.csproj" />
