--- a/ResumeML/ResumeML/log4net.config
+++ b/ResumeML/ResumeML/log4net.config
@@ -10,13 +10,13 @@
       <appender-ref ref="SysAppender"/>
     </root>
 
-    <appender name="SysAppender" type="MyAccess.log4net.Appender.RollingFileAppender,MyAccess" >
+    <appender name="SysAppender" type="log4net.Appender.RollingFileAppender,log4net" >
       <param name="File" value="Logger/" />
       <param name="AppendToFile" value="true" />
       <param name="RollingStyle" value="Date" />
       <param name="DatePattern" value="&quot;Logs_&quot;yyyyMMdd&quot;.txt&quot;" />
       <param name="StaticLogFileName" value="false" />
-      <layout type="MyAccess.log4net.Layout.PatternLayout,MyAccess">
+      <layout type="log4net.Layout.PatternLayout,log4net">
         <param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n" />
         <param name="Header" value="&#13;&#10;----------------------header--------------------------&#13;&#10;" />
         <param name="Footer" value="&#13;&#10;----------------------footer--------------------------&#13;&#10;" />
