no commit message

--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MyAccess\MyAccess.csproj" />
+    <ProjectReference Include="..\TemplateAction\TemplateAction.csproj" />
   </ItemGroup>
 
   <ItemGroup>
