--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="MySqlConnector" Version="1.3.11" />
+    <PackageReference Include="StackExchange.Redis" Version="2.2.50" />
     <PackageReference Include="System.Data.OracleClient" Version="1.0.8" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
