no commit message

--- a/ResumeML/ResumeML/ResumeML.csproj
+++ b/ResumeML/ResumeML/ResumeML.csproj
@@ -10,6 +10,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="DAL\**" />
+    <EmbeddedResource Remove="DAL\**" />
+    <None Remove="DAL\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.12" />
     <PackageReference Include="Microsoft.Extensions.ML" Version="1.6.0" />
     <PackageReference Include="PanGu.Core" Version="1.0.0" />
@@ -86,7 +92,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DAL\" />
     <Folder Include="Plugin\" />
   </ItemGroup>
 
