no commit message

--- a/ResumeML/ResumeML/appsettings.json
+++ b/ResumeML/ResumeML/appsettings.json
@@ -5,5 +5,9 @@
         "Url": "http://127.0.0.1:880"
       }
     }
+  },
+  "AuthService": {
+    "connstr": "server=127.0.0.1;user id=root;password=wan147;database=test;",
+    "redisconn": "127.0.0.1:6379,password=Hello@Wrq,allowadmin=true"
   }
 }
