--- a/ResumeML/AuthService/AuthService.csproj
+++ b/ResumeML/AuthService/AuthService.csproj
@@ -9,8 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Common\Common.csproj" />
     <ProjectReference Include="..\..\MyAccess\MyAccess.csproj" />
+    <ProjectReference Include="..\..\TemplateAction.NetCore\TemplateAction.NetCore.csproj" />
     <ProjectReference Include="..\..\TemplateAction\TemplateAction.csproj" />
   </ItemGroup>
 
