--- a/ResumeML/ResumeML/ResumeML.csproj
+++ b/ResumeML/ResumeML/ResumeML.csproj
@@ -17,7 +17,9 @@
 
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.12" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.ML" Version="1.6.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
     <PackageReference Include="PanGu.Core" Version="1.0.0" />
   </ItemGroup>
 
