no commit message

--- a/MainWeb/Web.config
+++ b/MainWeb/Web.config
@@ -13,7 +13,7 @@
       </system.Web>
   -->
   <appSettings>
-    <add key="testconnstr" value="server=127.0.0.1;user id=root;password=;database=test;"/>
+    <add key="testconnstr" value="server=127.0.0.1;user id=root;password=wan147;database=test;"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
