no commit message

--- a/ResumeML/ResumeML/appsettings.json
+++ b/ResumeML/ResumeML/appsettings.json
@@ -8,6 +8,10 @@
   },
   "AuthService": {
     "connstr": "server=127.0.0.1;user id=root;password=wan147;database=test;",
-    "redisconn": "127.0.0.1:6379,password=Hello@Wrq,allowadmin=true"
+    "redisconn": "127.0.0.1:6379,password=Hello@Wrq,allowadmin=true",
+    "enable_permission": true,
+    "enable_sso": false,
+    "sign_key": "Helloworld##",
+    "expire_hours": -1
   }
 }
