--- a/ResumeML/ResumeML/appsettings.json
+++ b/ResumeML/ResumeML/appsettings.json
@@ -11,6 +11,7 @@
     "connstr": "server=127.0.0.1;user id=root;password=wan147;database=test;",
     "redisconn": "127.0.0.1:6379,password=Hello@Wrq,allowadmin=true",
     "enable_permission": true,
+    "permission_from": 0,
     "enable_sso": false,
     "sign_key": "Helloworld##",
     "expire_hours": 1
