no commit message

--- a/ResumeML/ResumeML/appsettings.json
+++ b/ResumeML/ResumeML/appsettings.json
@@ -7,11 +7,11 @@
     }
   },
   "AuthService": {
-    "AuthModules": [],
+    "auth_modules": [],
     "connstr": "server=127.0.0.1;user id=root;password=wan147;database=test;",
     "redisconn": "127.0.0.1:6379,password=Hello@Wrq,allowadmin=true",
     "enable_permission": true,
-    "permission_from": 0,
+    "permission_from": 1,
     "enable_sso": false,
     "sign_key": "Helloworld##",
     "expire_hours": 1
